--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,51 @@
+# Ignore node_modules
 **/node_modules/**
+
+# Ignore .env files
 **.env**
+
+# Ignore build directories
 /bin
 /build
+
+# Ignore yarn error logs
 yarn-error.log
-notes.md
+
+# Ignore raw data directories
 src/data/raw/**
+
+# Ignore shell scripts
+**create_env.sh**
+
+# Ignore local .terraform directories
+**/.terraform/*
+
+# Ignore .tfstate files
+**.terraform.tfstate**
+*.tfstate.*
+**terraform.tfstate**
+**terraform.tfstate.backup**
+
+
+# Ignore crash log files
+crash.log
+crash.*.log
+
+# Ignore .tfvars files
+*.tfvars
+*.tfvars.json
+
+# Ignore override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Ignore tfplan files
+*.tfplan
+
+# Ignore CLI configuration files
+.terraformrc
