--- a/.github/workflows/Dockerizing.yml
+++ b/.github/workflows/Dockerizing.yml
@@ -1,15 +1,15 @@
-name: Deploying
+name: Dockerizing
 
 on:
   push:
-    branches: [setup_CI/CD]
+    branches: [main]
   workflow_dispatch:
       
 jobs:
   Setup:
     runs-on: ubuntu-latest
     environment:
-      name: Versions
+      name: Dockerizing
     steps:
       -
         name: Checkout
@@ -35,22 +35,3 @@ jobs:
           docker push bakkym/diablo4-bot
 
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
-
-      - name: Terraform Apply
-        id:   apply
-        run: |
-          terraform init
-          terraform validate
-          terraform plan 
-          terraform apply -auto-approve
